added page linking

--- a/index.html
+++ b/index.html
@@ -26,18 +26,24 @@
             </section> -->
 
             <div class="user-links">
-                
-                <a href="#login">Log In</a>
+                <nav class="navbar navbar-light bg-light">
+                    <form class="form-inline">
+                      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                  </nav> 
+                <a href="./login.html">Log In</a>
+                <a href="./index.html">Home</a>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Menu
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Dinner</a>
-                        <a class="dropdown-item" href="#">Meals</a>
-                        <a class="dropdown-item" href="#">Ingredients</a>
-                        <a class="dropdown-item" href="#">Occasions</a>
+                        <a class="dropdown-item" href="./menu/menu.html">Dinner</a>
+                        <a class="dropdown-item" href="./menu/menu2.html">Meals</a>
+                        <a class="dropdown-item" href="#">Drive-Thru Copycats</a>
+                        <a class="dropdown-item" href="#">What's New</a>
                     </div>
                 </div>
                <div class="dropdown">
@@ -46,15 +52,15 @@
                         Magazine
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Subscribe</a>
-                        <a class="dropdown-item" href="#">Manage Your Subscription</a>
-                        <a class="dropdown-item" href="#">Give a gift Subscription</a>
-                        <a class="dropdown-item" href="#">Get Help</a>
+                        <a class="dropdown-item" href="./menu/subscribe.html">Subscribe</a>
+                        <a class="dropdown-item" href="./menu/manageyoursub.html">Manage Your Subscription</a>
+                        <a class="dropdown-item" href="./menu/give agiftsub.html">Give a gift Subscription</a>
+                        <a class="dropdown-item" href="./menu/gethelp.html">Get Help</a>
                     </div>
                 </div>
 
                 <a href="#newsletter">Newsletter</a>
-                <a href="#sweepstakes">Sweepstakes</a>
+                <a href="#footer">About Us</a>
             </div>
         </div>
     </header>
@@ -67,8 +73,8 @@
             <p>IN THE KITCHEN</p>
             <h2>Which Bacon Cheeseburger Wins the Taste-Off?</H2>
         </div>
-        <div class="main-header">
-            <a href="#">Drive-Thru Copycats</a>
+        <div id="Drive-Thru Copycats" class="main-header">
+            <a href="./tile/drive.html">Drive-Thru Copycats</a>
         </div>
         <section class="box-container">
             <div class="row">
@@ -78,7 +84,7 @@
                     <img src="top/image1.jpg" alt="Image 1">
                     <div class="image-description">
                         <p>BURGERS RECIPES</p>
-                        <h3>Homemade Smash Burgers</h3>
+                       <a href="./tile/samshbrgers.html"> <h3>Homemade Smash Burgers</h3></a>
                         <div class="rating">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -94,7 +100,7 @@
                     <img src="top/image2.jpg" alt="Image 1">
                     <div class="image-description">
                         <p>SAUCES</p>
-                        <h3>Bang bang Sawuce</h3>
+                        <a href="./tile/Bang bang Sawuce.html"><h3>Bang bang Sawuce</h3></a>
                         <div class="rating">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -110,7 +116,7 @@
                     <img src="top/image3.jpg" alt="Image 1">
                     <div class="image-description">
                         <p>BABY BACK RIBS</p>
-                        <h3>Chef John'd Copycat McRib</h3>
+                        <a href="./tile/Chef John'd Copycat McRib.html"><h3>Chef John'd Copycat McRib</h3></a>
                         <div class="rating">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -131,7 +137,7 @@
                     <img src="top/image4.jpg" alt="Image 1">
                     <div class="image-description">
                         <p>CHGICKEN THIGH RECIPES</p>
-                        <h3>Copycat Chipotle Chicken</h3>
+                       <a href="./tile/Copycat Chipotle Chicken.html"> <h3>Copycat Chipotle Chicken</h3></a>
                         <div class="rating">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -147,7 +153,7 @@
                     <img src="top/image5.jpg" alt="Image 1">
                     <div class="image-description">
                         <p>NO MAYO</p>
-                        <h3>Sweet restaureant slaw</h3>
+                        <a href="./tile/Sweet restaureant slaw.html"><h3>Sweet restaureant slaw</h3></a>
                         <div class="rating">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -163,7 +169,7 @@
                     <img src="top/image6.jpg" alt="Image 1">
                     <div class="image-description">
                         <p>MEXICAN</p>
-                        <h3>Double |Decker Tacos</h3>
+                       <a href="./tile/Doublet1.html"><h3>Double |Decker Tacos</h3></a> 
                         <div class="rating">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -413,7 +419,7 @@
         </section>
 
         <!-- Footer -->
-        <footer>
+        <footer id="footer">
             <div class="footer-content">
                 <div class="footer-left">
                     <h1>INDIA RECIPE</h1>
